tests/negative/typecheck/dyn_type_not_found.orng
// dyn_type_not_found.orng:6:30: error: use of undeclared identifier `Mystery_Trait`
//     let x: &dyn Mystery_Trait = (4, 5)
//                             ^
// 
fn main() -> Int {
    let x: &dyn Mystery_Trait = (4, 5)
    5
}